# DataEnterpriseCoursework

./: CMakeLists.txt  Dockerfile  Eligibility.h  FieldOfViewAzimuthExtent.h  FrameContext.h  FrameCountTopic.h  GeoLLAToFrameReferencedRequestResponse.h  GeodVelocity_mps.h  IQGenerationData.h  InstantaneousFieldOfViewTopic.h  MatrixInFrame.h  NavForFrameTransformationTopic.h  NavigationDataTimeTags.h  OwnshipRequest.h  RadarInstallationConstantsRequestResponse.h  RegistrationTopic.h  Sightline.h  SightlineTargetRecord.h  SightlineTargetReport.h  TaskAtTimeRequest.h  TaskAtTimeRequestResponse.h  TaskAtTimeResponse.h  TaskMapping.h  compose.yaml  docker-compose.yml
concurrentutilities/: CMakeLists.txt
concurrentutilities/CircularBuffer/: CMakeLists.txt  CircularBuffer.h  Readme.md
concurrentutilities/CircularBuffer/Test/: CMakeLists.txt  CircularBufferTest.cpp
concurrentutilities/ConcurrentQueue/: CMakeLists.txt  ConcurrentQueue.h  README.md
concurrentutilities/ConcurrentQueue/Test/: CMakeLists.txt  SequentialTests.cpp  SumNumbersTest.cpp
concurrentutilities/Sleeper/: CMakeLists.txt  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Sleeper.vcxproj  Sleeper.vcxproj.filters  cmake_install.cmake
concurrentutilities/Sleeper/Debug/: Sleeper.lib
concurrentutilities/Sleeper/Private/: Sleeper.cpp
concurrentutilities/Sleeper/Public/: Sleeper.h
concurrentutilities/Sleeper/Test/: CMakeLists.txt  SleeperTest.cpp  TestComponentMessaging.h
concurrentutilities/catch2/: readme.md
nsi-units/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CTestTestfile.cmake  NSIunits.sln  NSIunits.vcxproj  NSIunits.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  nsi-units_build_clang.bdef  nsi-units_build_vxworks.bdef
nsi-units/NSIunits.dir/Debug/: NSIunits.lib.recipe
nsi-units/Private/: NSIFoot.cpp  NSIMach.cpp  NSIMillibar.cpp  NSIMillimeter.cpp  NSIUnitless.cpp
nsi-units/Public/: NSIGForce.h  NSIMach.h  NSIMillibar.h  NSIUnitless.h
nsi-units/System/pipeline/: Jenkinsfile
nsi-units/Tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CTestTestfile.cmake  NSIFootTest.cpp  NSIKnotTest.cpp  NSITests.sln  NSITests.vcxproj  NSITests.vcxproj.filters  NSIUnitlessTest.cpp  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
nsi-units/catch2/: CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
nsi-units/scripts/CMake/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
nsi-units/si-units/: CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
nsi-units/si-units/Private/: SICubicMeter.cpp  SIDegreePerSecondSquared.cpp  SIRadianPerSecond.cpp  SIRadianSquared.cpp  SIUnit.cpp
nsi-units/si-units/Public/: FloatEqualityChecker.h  SIDegree.h  SIDegreePerSecond.h  SIHertz.h  SIMeterSquared.h
topics/: Acceleration_mps.h  AngularAcceleration_degps2.h  ApplyCoherentIntegrationTopic.h  AzElToUVSightlineTransformation.h  AzElToUVSightlineTransformationRequestResponse.h  Bank_deg.h  CMakeLists.txt  DemandedVolumeTopic.h  DetectionOptimisations.h  DirectionCosineMatrix.h  Dwell.h  EchoTestLogTopic.h  FrameCountTopic.h  FrameToGeoLLAReferencedRequestResponse.h  GeoLLAToFrameReferencedRequestResponse.h  GeodVelocity_mps.h  IDRequestResponse.h  IQGenerationData.h  Inclination_deg.h  InstantaneousFieldOfViewTopic.h  Jenkinsfile  LLAOwnshipRequestResponse.h  LatLongPosition_deg.h  LinearVelocity.h  LinearVelocity_mps.h  MatrixInFrame.h  NavForFrameTransformationTopic.h  NavigationDataTimeTags.h  NavigationOffset.h  OwnshipPositionVelocityAndAcceleration.h  README.md  RadarInstallationConstants.h  RadarInstallationConstantsRequestResponse.h  SearchQuality.h  SearchQualityReport.h  SearchQualityReportRequestResponse.h  SearchTaskPerformanceCriteria.h  Sightline.h  SightlineAndPlotTopic.h  SightlineTargetRecord.h  (+10 more)
topics/Fabric/Utils/: LCA_Macros.h
topics/Scripts/: GenerateDocumentationAndCopyToWebserver.py
topics/Structs/: Area.h  DwellSightline.h  FieldOfView.h  FieldOfViewScanLimits.h  FilterType.h  Frame.h  FrameOfReference.h  GeoLLAReferencedVolume.h  KinematicData.h  LRIEnums.h  Outcome.h  OwnshipAndFrame0Nav.h  PBITType.h  Plot.h  Priority.h  RadarTaskType.h  ScanPattern.h  ScanPatternOptimisation.h  ScheduledTaskDemand.h  TaskState.h  Tick.h  TimepointSelection.h  Volume.h
topics/Topics/: Altitude_m.h  ApplyPulseCompressionTopic.h  AssociationToken.h  AttitudeRate_degps.h  AttitudeRequest.h  AttitudeRequestResponse.h  BurstDemand.h  ConditionedVolumeTopic.h  DemandedElevations.h  ECEFInstantaneousPosition.h  ECEFOwnshipRequestResponse.h  EchoTestTopic.h  FieldOfViewAzimuthExtents.h  FrameToGeoLLAReferencedRequestResponse.h  IDRequestResponse.h  Inclination_deg.h  InternalTrackPositionTopic.h  LLAOwnshipRequestResponse.h  LatLongPosition_deg.h  LinearVelocity.h  LinearVelocity_mps.h  NavigationOffset.h  OwnshipPositionVelocityAndAcceleration.h  RadarInstallationConstants.h  SearchQuality.h  SearchQualityReport.h  SearchQualityReportRequestResponse.h  SearchTaskPerformanceCriteria.h  SightlineAndPlotTopic.h  SightlineTransformation.h  SightlineTransformationRequestResponse.h  TaskMappingRequestResponse.h  TaskMappingStatus.h  TaskStateRequestTopic.h  TaskStatusTopic.h  TimeToCompleteReport.h  Topics.cpp  TrackQualityRadius.h  TrackRevisitRequestResponse.h  TrackRevisitResponse.h  (+16 more)
topics/Topics/HealthSubdomain/: AAUBITCommand.h  AAUPrimaryState.h  AESABITControl.h  APSCBITCommand.h  APSCOperationalCommand.h  AlertAck.h  AlertCondError.h  AlertMessage.h  (+16 more)
topicsecrsmk2internal/: CMakeLists.txt  REAME.md  Topics_build_clang_linux.bdef  Topics_build_vxworks.bdef  doxygenincludes.txt  polyspaceincludes.json
topicsecrsmk2internal/si-units/: CMakeLists.txt  Jenkinsfile  README.md
topicsecrsmk2internal/topicsecrsmk2weaponsystem/: CMakeLists.txt  Topics_build_MSVC_14.bdef  Topics_build_clang_windows.bdef  Topics_build_vxworks.bdef  doxygenincludes.txt  polyspaceincludes.json
(+382 files in other folders)
